--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.0.0"
+    "mongoose": "^7.0.0",
+    "multer": "^2.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
