Completely reset package.json for backend-only Railway deployment

--- a/package.json
+++ b/package.json
@@ -1,39 +1,1 @@
-{
-  "name": "rp-exotics-unified",
-  "version": "1.0.0",
-  "description": "RP Exotics Car Dealership Management System",
-  "main": "index.js",
-  "scripts": {
-    "install:all": "npm install && cd backend && npm install && cd ../frontend && npm install",
-    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
-    "dev:backend": "cd backend && npm start",
-    "dev:frontend": "cd frontend && npm start",
-    "build": "cd frontend && npm run build",
-    "test": "cd backend && npm test",
-    "test:frontend": "cd frontend && npm test",
-    "start": "cd backend && npm start",
-    "setup": "cd backend && node scripts/setup.js",
-    "seed": "cd backend && node scripts/userSetup.js && node scripts/populate-dealers.js && node scripts/seed-document-types.js"
-  },
-  "keywords": [
-    "car-dealership",
-    "management-system",
-    "react",
-    "nodejs",
-    "mongodb",
-    "express"
-  ],
-  "author": "RP Exotics",
-  "license": "UNLICENSED",
-  "devDependencies": {
-    "concurrently": "^8.2.2"
-  },
-  "workspaces": [
-    "backend",
-    "frontend"
-  ],
-  "engines": {
-    "node": ">=14.0.0",
-    "npm": ">=6.0.0"
-  }
-}
+{"name":"rp-exotics-api-server","version":"3.0.0","description":"RP Exotics API Server - Backend Only","main":"app.js","scripts":{"start":"node app.js","dev":"nodemon app.js"},"keywords":["api","server","nodejs","express"],"author":"RP Exotics","license":"UNLICENSED","engines":{"node":">=14.0.0","npm":">=6.0.0"}}
