--- a/rp-exotics-unified/package.json
+++ b/rp-exotics-unified/package.json
@@ -1,39 +1,34 @@
 {
-  "name": "rp-exotics-unified",
-  "version": "1.0.0",
-  "description": "RP Exotics Car Dealership Management System",
-  "main": "index.js",
+  "name": "rp-exotics-backend-v2",
+  "version": "5.0.0",
+  "description": "RP Exotics Backend V2 - Fresh Deployment",
+  "main": "app.js",
   "scripts": {
-    "install:all": "npm install && cd backend && npm install && cd ../frontend && npm install",
-    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
-    "dev:backend": "cd backend && npm start",
-    "dev:frontend": "cd frontend && npm start",
-    "build": "cd frontend && npm run build",
-    "test": "cd backend && npm test",
-    "test:frontend": "cd frontend && npm test",
-    "start": "cd backend && npm start",
-    "setup": "cd backend && node scripts/setup.js",
-    "seed": "cd backend && node scripts/userSetup.js && node scripts/populate-dealers.js && node scripts/seed-document-types.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
+  },
+  "dependencies": {
+    "axios": "^1.3.0",
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.0.0",
+    "multer": "^2.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   },
   "keywords": [
-    "car-dealership",
-    "management-system",
-    "react",
+    "api",
+    "server",
     "nodejs",
-    "mongodb",
     "express"
   ],
   "author": "RP Exotics",
   "license": "UNLICENSED",
-  "devDependencies": {
-    "concurrently": "^8.2.2"
-  },
-  "workspaces": [
-    "backend",
-    "frontend"
-  ],
   "engines": {
-    "node": ">=14.0.0",
-    "npm": ">=6.0.0"
+    "node": ">=16.0.0"
   }
 }
