--- a/rp-exotics-unified/backend/package.json
+++ b/rp-exotics-unified/backend/package.json
@@ -1,15 +1,15 @@
 {
   "name": "rp-exotics-backend",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js",
-    "setup-users": "node userSetup.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "setup-users": "node userSetup.js",
+    "postinstall": "cd ../frontend && npm install && npm run build"
   },
   "dependencies": {
     "axios": "^1.3.0",
-    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
